--- a/B-Jenkins-DataPower/compose-src/datapower/drouter/config/auto-startup.cfg
+++ b/B-Jenkins-DataPower/compose-src/datapower/drouter/config/auto-startup.cfg
@@ -1,6 +1,6 @@
 top; configure terminal;
 
-# configuration generated Tue Jun 18 12:17:33 2019; firmware version 307063
+# configuration generated Tue Jun 18 14:33:19 2019; firmware version 307063
 
 %if% available "domain-settings"
 
@@ -716,6 +716,19 @@ domain "app-dev"
   url-permissions "http+https" 
   file-permissions "CopyFrom+CopyTo+Delete+Display+Exec+Subdir" 
   file-monitoring "" 
+  config-mode local
+  import-format ZIP
+  local-ip-rewrite 
+  maxchkpoints 3
+exit
+
+domain "app-prd"
+  base-dir app-prd:
+  base-dir local:
+  config-file app-prd.cfg
+  visible-domain default
+  url-permissions "http+https" 
+  file-permissions "CopyFrom+CopyTo+Delete+Display+Exec+Subdir" 
   config-mode local
   import-format ZIP
   local-ip-rewrite 
