--- a/B-Jenkins-DataPower/compose-src/datapower/drouter/config/app-dev/app-dev.cfg
+++ b/B-Jenkins-DataPower/compose-src/datapower/drouter/config/app-dev/app-dev.cfg
@@ -1,6 +1,6 @@
 top; configure terminal;
 
-# configuration generated Tue Jun 18 10:50:37 2019; firmware version 307063
+# configuration generated Wed Jun 19 10:59:10 2019; firmware version 307063
 
 %if% available "domain-settings"
 
@@ -44,6 +44,161 @@ compile-options "default-attempt-stream"
 exit
 
 %endif%
+
+action "__default-accept-service-providers-filter-action__"
+  reset
+  type filter
+  input "NULL"
+  transform "store:///filter-accept-service-providers.xsl"
+  parse-settings-result-type none
+  transform-language none
+  named-inouts default
+  ssl-client-type proxy
+  no transactional 
+  soap-validation body
+  sql-source-type static
+  strip-signature 
+  no asynchronous 
+  results-mode first-available
+  retry-count 0
+  retry-interval 1000
+  no multiple-outputs 
+  iterator-type XPATH
+  timeout 0
+  http-method GET
+  http-method-limited POST
+  http-method-limited2 POST
+exit
+
+action "__default-accept-service-providers-results-action__"
+  reset
+  type results
+  input "INPUT"
+  parse-settings-result-type none
+  transform-language none
+  named-inouts default
+  ssl-client-type proxy
+  no transactional 
+  soap-validation body
+  sql-source-type static
+  strip-signature 
+  no asynchronous 
+  results-mode first-available
+  retry-count 0
+  retry-interval 1000
+  no multiple-outputs 
+  iterator-type XPATH
+  timeout 0
+  http-method GET
+  http-method-limited POST
+  http-method-limited2 POST
+exit
+
+action "__dp-policy-call-action__"
+  reset
+  summary "Call the next policy."
+  type call
+  input "INPUT"
+  parse-settings-result-type none
+  transform-language none
+  output "INPUT"
+  named-inouts default
+  ssl-client-type proxy
+  rule "var://context/policy/fw/call-rule"
+  no transactional 
+  soap-validation body
+  sql-source-type static
+  strip-signature 
+  no asynchronous 
+  results-mode first-available
+  retry-count 0
+  retry-interval 1000
+  no multiple-outputs 
+  iterator-type XPATH
+  timeout 0
+  http-method GET
+  http-method-limited POST
+  http-method-limited2 POST
+exit
+
+action "__dp-policy-init-xform-action__"
+  reset
+  summary "Set up context vars and annotate map XML."
+  type xform
+  input "NULL"
+  transform "store://dp/policy-enforce-init.xsl"
+  parse-settings-result-type none
+  transform-language none
+  output "NULL"
+  named-inouts default
+  ssl-client-type proxy
+  no transactional 
+  soap-validation body
+  sql-source-type static
+  strip-signature 
+  no asynchronous 
+  results-mode first-available
+  retry-count 0
+  retry-interval 1000
+  no multiple-outputs 
+  iterator-type XPATH
+  timeout 0
+  http-method GET
+  http-method-limited POST
+  http-method-limited2 POST
+exit
+
+action "__dp-policy-results-action__"
+  reset
+  summary "Results action for our policy enforcement rules."
+  type results
+  input "INPUT"
+  parse-settings-result-type none
+  transform-language none
+  named-inouts default
+  ssl-client-type proxy
+  no transactional 
+  soap-validation body
+  sql-source-type static
+  strip-signature 
+  no asynchronous 
+  results-mode first-available
+  retry-count 0
+  retry-interval 1000
+  no multiple-outputs 
+  iterator-type XPATH
+  timeout 0
+  http-method GET
+  http-method-limited POST
+  http-method-limited2 POST
+exit
+
+action "__dp-policy-traverse-xform-action__"
+  reset
+  summary "Identify next policy by traversing the annotated map."
+  type xform
+  input "NULL"
+  transform "store://dp/policy-enforce-traverse.xsl"
+  parse-settings-result-type none
+  transform-language none
+  output "NULL"
+  named-inouts default
+  ssl-client-type proxy
+  no transactional 
+  soap-validation body
+  sql-source-type static
+  strip-signature 
+  no asynchronous 
+  results-mode first-available
+  retry-count 0
+  retry-interval 1000
+  no multiple-outputs 
+  iterator-type XPATH
+  timeout 0
+  http-method GET
+  http-method-limited POST
+  http-method-limited2 POST
+exit
 
 action "app-rule-req_results_output_0"
   reset
@@ -121,6 +276,43 @@ action "app-rule-req_xform_0"
   http-method GET
   http-method-limited POST
   http-method-limited2 POST
+exit
+
+rule "__default-accept-service-providers-request__"
+  reset
+  summary "Accept messages intended for known services, reject everything else."
+  type request-rule
+  input-filter none
+  output-filter none
+  no non-xml-processing 
+  no unprocessed 
+    action "__default-accept-service-providers-filter-action__"
+    action "__default-accept-service-providers-results-action__"
+exit
+
+rule "__default-accept-service-providers-response__"
+  reset
+  summary "Accept responses received from known services."
+  type response-rule
+  input-filter none
+  output-filter none
+  no non-xml-processing 
+  no unprocessed 
+    action "__default-accept-service-providers-results-action__"
+exit
+
+rule "__dp-policy-begin__"
+  reset
+  summary "Initiate policy enforcement by annotating policy and determining first policy to enforce."
+  type rule
+  input-filter none
+  output-filter none
+  no non-xml-processing 
+  no unprocessed 
+    action "__dp-policy-init-xform-action__"
+    action "__dp-policy-traverse-xform-action__"
+    action "__dp-policy-call-action__"
+    action "__dp-policy-results-action__"
 exit
 
 rule "app-rule-req"
@@ -402,7 +594,7 @@ exit
 
 mpgw "app-mpgw"
   no policy-parameters
-  summary "Lopback returns content size, URI"
+  summary "Loopback returns content size, URI"
   priority normal
   front-protocol app-http-fsh
   xml-manager default
