--- a/B-Jenkins-DataPower/compose-src/datapower/drouter/config/app-tst/app-dev.cfg
+++ b/B-Jenkins-DataPower/compose-src/datapower/drouter/config/app-tst/app-dev.cfg
@@ -1,6 +1,6 @@
 top; configure terminal;
 
-# configuration generated Wed Jun 19 13:07:26 2019; firmware version 307063
+# configuration generated Wed Jun 19 10:59:10 2019; firmware version 307063
 
 %if% available "domain-settings"
 
@@ -475,7 +475,7 @@ exit
 
 source-http "app-http-fsh"
   local-address 0.0.0.0
-  port 3001
+  port 3000
   http-client-version HTTP/1.1
   allowed-features "HTTP-1.0+HTTP-1.1+POST+PUT+QueryString+FragmentIdentifiers" 
   persistent-connections 
@@ -586,6 +586,110 @@ policy-attachments "app-mpgw"
   enforcement-mode enforce
   policy-references 
   sla-enforcement-mode allow-if-no-sla
+exit
+
+%endif%
+
+%if% available "mpgw"
+
+mpgw "app-mpgw"
+  no policy-parameters
+  summary "Loopback returns content size, URI"
+  priority normal
+  front-protocol app-http-fsh
+  xml-manager default
+  ssl-client-type proxy
+  default-param-namespace "http://www.datapower.com/param/config"
+  query-param-namespace "http://www.datapower.com/param/query"
+  propagate-uri 
+  monitor-processing-policy terminate-at-first-throttle
+  request-attachments strip
+  response-attachments strip
+  no request-attachments-flow-control 
+  no response-attachments-flow-control 
+  root-part-not-first-action process-in-order
+  front-attachment-format dynamic
+  back-attachment-format dynamic
+  mime-front-headers 
+  mime-back-headers 
+  stream-output-to-back buffer-until-verification
+  stream-output-to-front buffer-until-verification
+  max-message-size 0
+  no gateway-parser-limits 
+  element-depth 512
+  attribute-count 128
+  max-node-size 33554432
+  forbid-external-references 
+  external-references forbid
+  max-prefixes 1024
+  max-namespaces 1024
+  max-local-names 60000
+  attachment-byte-count 2000000000
+  attachment-package-byte-count 0
+  debugger-type internal
+  debug-history 25
+  no flowcontrol 
+  soap-schema-url "store:///schemas/soap-envelope.xsd"
+  front-timeout 120
+  back-timeout 120
+  front-persistent-timeout 180
+  back-persistent-timeout 180
+  no include-content-type-encoding 
+  http-server-version HTTP/1.1
+  persistent-connections 
+  no loop-detection 
+  host-rewriting 
+  no chunked-uploads 
+  process-http-errors 
+  http-client-ip-label "X-Client-IP"
+  http-global-tranID-label "X-Global-Transaction-ID"
+  inorder-mode "" 
+  wsa-mode sync2sync
+  wsa-require-aaa 
+  wsa-strip-headers 
+  wsa-default-replyto "http://schemas.xmlsoap.org/ws/2004/08/addressing/role/anonymous"
+  wsa-default-faultto "http://schemas.xmlsoap.org/ws/2004/08/addressing/role/anonymous"
+  no wsa-force 
+  wsa-genstyle sync
+  wsa-http-async-response-code 204
+  wsa-timeout 120
+  no wsrm 
+  wsrm-sequence-expiration 3600
+  wsrm-destination-accept-create-sequence 
+  wsrm-destination-maximum-sequences 400
+  no wsrm-destination-inorder 
+  wsrm-destination-maximum-inorder-queue-length 10
+  no wsrm-destination-accept-offers 
+  no wsrm-request-force 
+  no wsrm-response-force 
+  no wsrm-source-request-create-sequence 
+  no wsrm-source-response-create-sequence 
+  no wsrm-source-make-offer 
+  no wsrm-source-sequence-ssl 
+  wsrm-source-maximum-sequences 400
+  wsrm-source-retransmission-interval 10
+  wsrm-source-exponential-backoff 
+  wsrm-source-retransmit-count 4
+  wsrm-source-maximum-queue-length 30
+  wsrm-source-request-ack-count 1
+  wsrm-source-inactivity-close-interval 360
+  no force-policy-exec 
+  rewrite-errors 
+  delay-errors 
+  delay-errors-duration 1000
+  request-type xml
+  response-type xml
+  follow-redirects 
+  no rewrite-location-header 
+  stylepolicy app-policy
+  type dynamic-backend
+  no compression 
+  no allow-cache-control 
+  policy-attachments app-mpgw
+  no wsmagent-monitor 
+  wsmagent-monitor-capture-mode all-messages
+  no proxy-http-response 
+  transaction-timeout 0
 exit
 
 %endif%
